# mind-lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  README_ZH.md  pyproject.toml
client/: __init__.py  config.example.py  mind_client.py  mind_client_secure.py  requirements.txt
docs/: ADMIN_APPROVAL_SYSTEM.md  API_REFERENCE.md  DEPLOY_GUIDE.md  FAQ.md
docs-zh/: ADMIN_APPROVAL_SYSTEM.md  API_REFERENCE.md  CONTRIBUTING.md  DEPLOY_GUIDE.md  FAQ.md  README.md  basic_usage.py
examples/: basic_usage.py
server/: .env.example  DEPLOY.md  __init__.py  data_store.py  gunicorn.conf.py  health_check.py  mind_server.py  mind_server_secure.py  mind_server_v2.1.1.py  mind_server_v2.1.py  node_auth.py  requirements.txt  start.bat  start.sh
server/auth/: __init__.py  api_key.py
server/distributed/: __init__.py  coordinator.py  nodes.py  persistence.py  replication.py  sharding.py
tests/: test_client.py  test_distributed.py  test_full.py  test_server.py
