[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-lib"
version = "2.2.3"
description = "Distributed AI Collective Consciousness Sync System - Enable AI to share thoughts and skills across servers, with thread-safe storage, HMAC node authentication, and production-ready deployment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Pumpking", email = "pumpking@users.noreply.github.com"}
]
keywords = ["ai", "distributed", "mind-sync", "consciousness", "openclaw", "clawhub"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/epantrip/mind-lib"
Documentation = "https://github.com/epantrip/mind-lib/tree/main/docs"
Repository = "https://github.com/epantrip/mind-lib"
Issues = "https://github.com/epantrip/mind-lib/issues"

[tool.setuptools]
packages = ["server", "client"]

[tool.setuptools.package-dir]
server = "server"
client = "client"
